--- a/smart_admin/pom.xml
+++ b/smart_admin/pom.xml
@@ -63,6 +63,14 @@
                 </configuration>
             </plugin>
             <plugin>
+<groupId>com.heroku.sdk</groupId>
+<artifactId>heroku-maven-plugin</artifactId>
+<version>0.3.5</version>
+<configuration>
+<appName>smart-store</appName>
+</configuration>
+</plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.3</version>
@@ -70,6 +78,7 @@
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
+            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
